; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/dvb-frontends/extr_dib3000mb.c_dib3000mb_read_status.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/dvb-frontends/extr_dib3000mb.c_dib3000mb_read_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_frontend = type { %struct.dib3000_state* }
%struct.dib3000_state = type { i32 }

@DIB3000MB_REG_AGC_LOCK = common dso_local global i32 0, align 4
@FE_HAS_SIGNAL = common dso_local global i32 0, align 4
@DIB3000MB_REG_CARRIER_LOCK = common dso_local global i32 0, align 4
@FE_HAS_CARRIER = common dso_local global i32 0, align 4
@DIB3000MB_REG_VIT_LCK = common dso_local global i32 0, align 4
@FE_HAS_VITERBI = common dso_local global i32 0, align 4
@DIB3000MB_REG_TS_SYNC_LOCK = common dso_local global i32 0, align 4
@FE_HAS_SYNC = common dso_local global i32 0, align 4
@FE_HAS_LOCK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"actual status is %2x\0A\00", align 1
@.str.1 = private unnamed_addr constant [93 x i8] c"autoval: tps: %d, qam: %d, hrch: %d, alpha: %d, hp: %d, lp: %d, guard: %d, fft: %d cell: %d\0A\00", align 1
@DIB3000MB_REG_TPS_LOCK = common dso_local global i32 0, align 4
@DIB3000MB_REG_TPS_QAM = common dso_local global i32 0, align 4
@DIB3000MB_REG_TPS_HRCH = common dso_local global i32 0, align 4
@DIB3000MB_REG_TPS_VIT_ALPHA = common dso_local global i32 0, align 4
@DIB3000MB_REG_TPS_CODE_RATE_HP = common dso_local global i32 0, align 4
@DIB3000MB_REG_TPS_CODE_RATE_LP = common dso_local global i32 0, align 4
@DIB3000MB_REG_TPS_GUARD_TIME = common dso_local global i32 0, align 4
@DIB3000MB_REG_TPS_FFT = common dso_local global i32 0, align 4
@DIB3000MB_REG_TPS_CELL_ID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dvb_frontend*, i32*)* @dib3000mb_read_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dib3000mb_read_status(%struct.dvb_frontend* %0, i32* %1) #0 {
  %3 = alloca %struct.dvb_frontend*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.dib3000_state*, align 8
  store %struct.dvb_frontend* %0, %struct.dvb_frontend** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.dvb_frontend*, %struct.dvb_frontend** %3, align 8
  %7 = getelementptr inbounds %struct.dvb_frontend, %struct.dvb_frontend* %6, i32 0, i32 0
  %8 = load %struct.dib3000_state*, %struct.dib3000_state** %7, align 8
  store %struct.dib3000_state* %8, %struct.dib3000_state** %5, align 8
  %9 = load i32*, i32** %4, align 8
  store i32 0, i32* %9, align 4
  %10 = load i32, i32* @DIB3000MB_REG_AGC_LOCK, align 4
  %11 = call i32 @rd(i32 %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %2
  %14 = load i32, i32* @FE_HAS_SIGNAL, align 4
  %15 = load i32*, i32** %4, align 8
  %16 = load i32, i32* %15, align 4
  %17 = or i32 %16, %14
  store i32 %17, i32* %15, align 4
  br label %18

18:                                               ; preds = %13, %2
  %19 = load i32, i32* @DIB3000MB_REG_CARRIER_LOCK, align 4
  %20 = call i32 @rd(i32 %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %27

22:                                               ; preds = %18
  %23 = load i32, i32* @FE_HAS_CARRIER, align 4
  %24 = load i32*, i32** %4, align 8
  %25 = load i32, i32* %24, align 4
  %26 = or i32 %25, %23
  store i32 %26, i32* %24, align 4
  br label %27

27:                                               ; preds = %22, %18
  %28 = load i32, i32* @DIB3000MB_REG_VIT_LCK, align 4
  %29 = call i32 @rd(i32 %28)
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %36

31:                                               ; preds = %27
  %32 = load i32, i32* @FE_HAS_VITERBI, align 4
  %33 = load i32*, i32** %4, align 8
  %34 = load i32, i32* %33, align 4
  %35 = or i32 %34, %32
  store i32 %35, i32* %33, align 4
  br label %36

36:                                               ; preds = %31, %27
  %37 = load i32, i32* @DIB3000MB_REG_TS_SYNC_LOCK, align 4
  %38 = call i32 @rd(i32 %37)
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %40, label %47

40:                                               ; preds = %36
  %41 = load i32, i32* @FE_HAS_SYNC, align 4
  %42 = load i32, i32* @FE_HAS_LOCK, align 4
  %43 = or i32 %41, %42
  %44 = load i32*, i32** %4, align 8
  %45 = load i32, i32* %44, align 4
  %46 = or i32 %45, %43
  store i32 %46, i32* %44, align 4
  br label %47

47:                                               ; preds = %40, %36
  %48 = load i32*, i32** %4, align 8
  %49 = load i32, i32* %48, align 4
  %50 = call i32 (i8*, i32, ...) @deb_getf(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 %49)
  %51 = load i32, i32* @DIB3000MB_REG_TPS_LOCK, align 4
  %52 = call i32 @rd(i32 %51)
  %53 = load i32, i32* @DIB3000MB_REG_TPS_QAM, align 4
  %54 = call i32 @rd(i32 %53)
  %55 = load i32, i32* @DIB3000MB_REG_TPS_HRCH, align 4
  %56 = call i32 @rd(i32 %55)
  %57 = load i32, i32* @DIB3000MB_REG_TPS_VIT_ALPHA, align 4
  %58 = call i32 @rd(i32 %57)
  %59 = load i32, i32* @DIB3000MB_REG_TPS_CODE_RATE_HP, align 4
  %60 = call i32 @rd(i32 %59)
  %61 = load i32, i32* @DIB3000MB_REG_TPS_CODE_RATE_LP, align 4
  %62 = call i32 @rd(i32 %61)
  %63 = load i32, i32* @DIB3000MB_REG_TPS_GUARD_TIME, align 4
  %64 = call i32 @rd(i32 %63)
  %65 = load i32, i32* @DIB3000MB_REG_TPS_FFT, align 4
  %66 = call i32 @rd(i32 %65)
  %67 = load i32, i32* @DIB3000MB_REG_TPS_CELL_ID, align 4
  %68 = call i32 @rd(i32 %67)
  %69 = call i32 (i8*, i32, ...) @deb_getf(i8* getelementptr inbounds ([93 x i8], [93 x i8]* @.str.1, i64 0, i64 0), i32 %52, i32 %54, i32 %56, i32 %58, i32 %60, i32 %62, i32 %64, i32 %66, i32 %68)
  ret i32 0
}

declare dso_local i32 @rd(i32) #1

declare dso_local i32 @deb_getf(i8*, i32, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
